--- a/cloud-init.yaml.template
+++ b/cloud-init.yaml.template
@@ -19,3 +19,7 @@ runcmd:
   - sudo yum install -y python-setuptools
   - pip install --upgrade pip
   - pip install --upgrade setuptools
+  - sudo sed -i --follow-symlinks 's/^SELINUX=.*/SELINUX=disabled/g' /etc/sysconfig/selinux
+
+power_state:
+  mode: reboot
