--- a/cloud-init.yaml.template
+++ b/cloud-init.yaml.template
@@ -19,3 +19,6 @@ runcmd:
   - sudo yum install -y python-setuptools
   - pip install --upgrade pip
   - pip install --upgrade setuptools
+
+power_state:
+  mode: reboot
